deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    rollingUpdate:
      maxSurge: 0       
      maxUnavailable: 1 
    type: RollingUpdate 
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.37.3
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
          - name: SIGNUPS_ALLOWED
            value: "false"
          - name: TZ
            value: "America/Los_Angeles"
          - name: ADMIN_TOKEN
            valueFrom:
              secretKeyRef:
                name: vwp-secrets
                key: ADMIN_TOKEN      
        ports:                              # < the ports required (see container documentation)
        - containerPort: 80
          name: http-80
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
        - mountPath: /data
          name: vaultwarden-storage-localpath
      volumes:
      - name: vaultwarden-storage-localpath
        persistentVolumeClaim:
          claimName: vaultwarden-storage-localpath
