service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vaultwarden
